MDEV-21832 FORCE all partition to rebuild if any one of                 the partition does rebuild

- During DDL, if one partition requires table rebuild and other partition
doesn't need rebuild then all partition should be forced to rebuild.
In commit_inplace_alter_table(), InnoDB does check to make sure all
partition does the same alter algorithm